--- a/paper/rhapsodize-mobile-application/ubicomp.tex
+++ b/paper/rhapsodize-mobile-application/ubicomp.tex
@@ -69,54 +69,37 @@ breaklinks=true,
     \affaddr{Cornell University}\\
     \affaddr{516 University Ave, Ithaca, NY 14850}\\
     \email{cyt25@cornell.edu}\\
-  \alignauthor 2nd Author Name\\
-    \affaddr{Affiliation}\\
-    \affaddr{Address}\\
-    \email{e-mail address}\\
-    \affaddr{Optional phone number}    
+  \alignauthor Mark Yoon\\
+    \affaddr{Cornell University}\\
+    \affaddr{311 Eddy St., Ithaca, NY 14850}\\
+    \email{yhy5@cornell.edu}\\
 }
 
 \maketitle
 
 \begin{abstract}
-Speech disfluencies are a common part of human conversation. From public speeches to everyday chatting, words such as “like,” “um,” and “such as” permeate our vocabulary. A paper in the Journal of Psycholinguistic Research looks for a relationship between disfluency and speech comprehension. It concludes that speech “disfluency affects core language comprehension processes” (Arnold 1). Additional studies have been done to identify why we say these words in our speech. A study published in the Language and Linguistics Compass Journal concludes that “there is little evidence to suggest that they are intentionally produced, or should be considered to be words in the conventional sense” (Corley 1), indicating that these words are purely hesitation disfluencies. Now that we have established these speech disfluencies are detrimental to communication and speech giving, we set out to create a tool to help individuals get rid of this habit. Our application, Rhapsodize, takes user speech as an input and notifies the user when/how often these words are said. The user would be able to view their relative performance over time regarding their speech patterns, tracking their improvement in avoiding these “crutch” words.
+Speech disfluencies are a common part of human conversation. From public speeches to everyday conversation, words such as “like,” “um,” and “you know” permeate our vocabulary. A paper in the Journal of Psycholinguistic Research looks for a relationship between disfluency and speech comprehension. It concludes that speech “disfluency affects core language comprehension processes” (Arnold 1). Additional studies have been done to identify why we say these words in our speech. A study published in the Language and Linguistics Compass Journal concludes that “there is little evidence to suggest that they are intentionally produced, or should be considered to be words in the conventional sense” (Corley 1), indicating that these words are purely hesitation disfluencies. Now that we have established these speech disfluencies are detrimental to communication and speech giving, we set out to create a tool to help individuals get rid of this habit. Our application, Rhapsodize, takes user speech as an input and notifies the user when/how often these words are said. The user is able to view their relative performance over time regarding their speech patterns, tracking their improvement in avoiding these crutch words.
 \end{abstract}
 
 \keywords{
-	Guides; instructions; author's kit; conference publications;
-	keywords should be separated by a semi-colon.
-	\textcolor{red}{Mandatory section to be included in your final version.}
+	speech disfluencies; natural language processing; crutch word detection; speech recognition; mobile computing
 }
 
-\category{H.5.m.}{Information Interfaces and Presentation (e.g. HCI)}{Miscellaneous}
-
-See: \url{http://www.acm.org/about/class/1998/}
-for more information and the full list of ACM classifiers
-and descriptors. 
-\textcolor{red}{Mandatory section to be included in your
-final version. On the submission page only the classifiers'
-letter-number combination will need to be entered.}
+\category{H.1.2}{User/Machine Systems}{I.2.7.}{ Natural Language Processing}
 
 \terms{
-	Human Factors; Design; Measurement. 
-	If you choose more than one ACM General Term, 
-	separate the terms with a semi-colon.
+	Human Factors; Design; Experimentation
 }
-
-See list of the limited ACM 16 terms in the
-instructions and additional information:
-\url{http://www.sheridanprinting.com/sigchi/generalterms.htm}.
-\textcolor{red}{Optional section to be included in your final version.}
 
 \section{Introduction}
 
-Public speaking is a very common fear amongst people. Speech ranges across a lot of different scenarios -- after all, it is the main method by which we communicate with each other. Whether it is giving a speech or talking amongst friends, it is very common for people to have slight speech impediments. Phrases such as “like” and “um” permeates throughout our speech today and oftentimes the speaker does so unknowingly. After becoming so comfortable using these “crutch” words, it’s very hard for an individual to restrain his or herself from doing so.
+Public speaking is a very common fear amongst people. Speech ranges across a lot of different scenarios – after all, it is the main method by which we communicate with each other. Whether it is giving a speech or talking amongst friends, it is very common for people to have slight speech impediments. Phrases such as “like” and “um” permeate our speech and oftentimes the speaker does so unknowingly. After becoming so comfortable using these “crutch” words, it’s very hard for an individual to restrain his or herself from doing so.
 
-Our application, Rhapsodize, aims to prevent this problem. If a user gets some kind of notification when saying a crutch word, it will be easier to prevent in the future. When saying a crutch word in conversation or while practicing a speech, Rhapsodize will notify the user that a crutch word has been said, hopefully guiding the user to less and less frequent usage of these words. Over time, the user will be behaviorally conditioned to avoid saying these words, either consciously or subconsciously, thereby improving their overall speech giving performance.
+Our application, Rhapsodize, aims to prevent this problem. We hypothesize that notifying a user of crutch word usage in real time will have a beneficial outcome in reducing the frequency of crutch word usage. When saying a crutch word in conversation or while practicing a speech, Rhapsodize will notify the user that a crutch word has been said, hopefully guiding the user to less and less frequent usage of these words. Over time, the user will be behaviorally conditioned to avoid saying these words, either consciously or subconsciously, thereby improving their overall speech giving performance.
 
-Rhapsodize is an Android application (4.1+) that uses Carnegie Mellon University’s CMUSphinx speech recognition API to continuously detect speech for crutch word occurrences. It notifies the user when these words are said and also keeps track of how often they are said so that the user can keep track of progress. Though ideally the application would be used throughout the day to keep track of the user’s speech in daily conversation, this would lead to privacy concerns as well as many more technical challenges in making the application more than simply proof of concept. As a result, Rhapsodize is to be used as a more situational, speech-giving improvement tool. The user places the phone running Rhapsodize in front of him or herself (or inside his or her pocket through the use of a microphone) while practicing giving a speech and the device will detect and count crutch word occurrences. 
+Rhapsodize is an Android application that uses Carnegie Mellon University’s CMUbSphinx speech recognition API to continuously detect speech for crutch word occurrences. It notifies the user when these words are said and also keeps track of how often they are said so that the user can log progress. Though ideally the application would be used throughout the day to keep track of the user’s speech in daily conversation, this would lead to privacy concerns as well as many more technical challenges in making the application more than simply proof of concept. As a result, Rhapsodize is to be used as a more situational, speech-giving improvement tool. The user places the phone running Rhapsodize in front of him or herself (or inside his or her pocket through the use of a microphone) while practicing giving a speech and the device will detect and count crutch word occurrences. 
 
-Our experimental design seeks to determine to what extent such a tool would benefit users in improving their speech giving skills. Ideally, use of the application would allow users to become more fluent in their speaking by allowing them to train themselves over time to speak with minimal inclusion of such speech disfluencies. Long term, we hope to distribute a fully-realized version of our application with additional features, including captured transcriptions and data visualizations for general and widespread public use.
+Our experimental design seeks to determine to what extent such a tool would benefit users in improving their speech giving skills. Ideally, the use of the application would allow users to become more fluent in their speaking by allowing them to train themselves over time to speak with minimal inclusion of such speech disfluencies. Long term, we hope to distribute a fully-realized version of our application with additional features, including captured transcriptions and data visualizations for general and widespread public use.
 
 
 \section{Related Work}
@@ -142,15 +125,30 @@ Through the behavioral training of users through auditory and haptic feedback, o
 
 \subsection{Application Description}
 
-things
+Rhapsodize is intended to be a tool that a user can access on the go. The three components that are necessary for Rhapsodize to function as intended are a microphone, user-facing screen, and processor. Given these prerequisites, it made the most sense to make a mobile application. Our application is built on the Java-based Android mobile application platform (4.1+) (http://developer.android.com/index.html). The design decisions we made when creating the application hinged upon the use case that we wanted to have. As a result, the user-interface of the application reflects how we wanted the application to be used. Past the user-interface, the implementation of natural language processing to perform speech recognition is crucial to the functionality of the application. As a result, a lot of effort was put into making the recognition as accurate as possible.
 
 \subsection{User Interface}
 
-yeh
+When designing our application, we had two use cases in mind. The first was to have the application constantly open in the user’s background. A mic, via a bluetooth headset, would capture the user’s speech throughout the day, counting the times various crutch words were said in everyday conversation. This data can then show overall speech patterns of the user. The second use case was to have the application used as a utility to help users practice their speech in a controlled, quiet setting - i.e. the user would use the application to explicitly improve their speech. 
 
-\subsection{Natural Language Processing}
+There are some concerns with the first use case. Firstly, there would undoubtedly be some privacy concerns. In order to capture speech, the user’s mic would have to be constantly on in the background. Not only would the mic capture all of the user’s own speech, it would also capture the speech of all of those within earshot of the user. Secondly, having the mic capture the user’s speech amidst everyday ambient noise makes speech recognition through natural language processing extremely more difficult. When we initially created and tested our application for this use case, there were enough false positives that the data integrity was compromised and no information of any significance would be obtained by the user.
 
-hi
+Given both the ethical and technical concerns surrounding the first use case, we modified the application to fit the second model instead. The user opens the application whenever they want to practice their speech. Once the application is open, the user can press a button to start the recognition. For best performance, a bluetooth mic or inline headphone mic should be used while the phone is placed in the user’s pocket. If such a mic is not available, the phone should be placed on a surface in front of the user, with the mic on the phone unobstructed. Once the recognizer is started, the application starts keeping track of the frequency of crutch words said and when. 
+
+Another important consideration we had when designing the application was how to notify the user of crutch word usage. Because the application is mobile-based, notifications can be made through a vibration or audio alert. A more important question is whether or not notifications are beneficial. Constantly notifying the user of a notification could have negative effects on the user as it may lead to nervousness. Since everybody is unique in how they respond to feedback, Rhapsodize is designed such that the user can decide what kind of notification is received upon crutch word occurrence. The options we have are no notifications, vibration only, ring only, or both vibration and ring. 
+
+Once the user is finished practicing, the user presses a button to stop the recognition. The results page shows how many times each crutch word was said and how long the practice lasted. The user can then use this information to determine overall performance for the given session. There are many things that can be done to improve the user interface but they are not currently implemented. Discussion of future improvements can be found later in this paper.
+
+\subsection{Technical Implementation}
+
+The usefulness of our application is entirely dependant on the accuracy of our speech recognition. As a result, a lot of emphasis is placed on this computation. There were two main application program interfaces (API’s) to consider when it comes to Android speech recognition and natural language processing. The first is the Google native speech recognition API. Google’s speech recognition is top-class. However, there are several drawbacks for this particular API. In general, the service is not very flexible. The process is completely abstracted and encapsulated, which is good for most people, but because we are using our application in a very specific way to search for keywords, being able to modify the process is a desirable feature. Furthermore, the Google speech recognition API does not support offline processing capabilities which means that it’s possible that the computation could be bottlenecked by the internet speed. However, the most important limitation that this API had was the lack of continuous keyword spotting. For our application to function as we want to, notifying the user in real time of crutch word usage, the speech processing needs to be done in real time. Google’s speech recognition library does not do this. 
+
+As a result, we used CMU Sphinx, a speech recognition API that is designed specifically for low-resource platforms (such as mobile devices). Not only does the CMU Sphinx Android port allow for continuous keyword spotting, it also allows for heavy customization in the natural language processing computation. 
+
+A lot of fine tuning of the speech recognition was needed in order to get decent accuracy from the system. CMU Sphinx performs signal processing to match the input sound against the phonetics of the words in its dictionary. A similarity matrix is calculated by comparing the input and the dictionary; if the similarity value crosses a certain threshold, a notification goes off, saying that there has been a match. Not only can we calibrate this threshold value, we can also change the dictionary that CMU Sphinx takes as an input. There are many trained dictionaries available and we found that one of the CMU Sphinx native dictionaries gave the best results.
+
+In performing keyword spotting, there are some nuances to consider. Oftentimes, crutch words such as “like” can be used in context correctly -- because the speech recognizer system is not smart enough to distinguish between a correct use of “like” and it being used as a crutch word, it simply notifies the user of both. There are some methods that can be used to try to minimize these occurrences. Given a large corpus, we can train a system to calculate the probability of a sequence of words. An N-gram is a set of consecutive words given a corpus. It can be seen as a window frame of words. Given a block of text, n words are viewed at a time. Using the Markov Assumption, we can estimate the likelihood of a word appearing in a sentence given the surrounding words. For example, if the user says “she is like a rose,” the system will initially hear “she is” and find the probability that the next token is “like.” If the probability is high, then the notification will not go off, as it’s likely that the word is being used properly and vice versa. This type of natural language processing is fairly computationally heavy. We implemented a similar system that would help us eliminate a small number of false positives but quickly learned that the processing power of mobile devices is not fast enough to support such complex computations. The phone processed the computation too slowly and as a result the phone was no longer giving real time feedback, which undermines the main functionality of the device. As mobile computing becomes faster, however, this is a good strategy to eliminate false positives.
+
 
 \begin{figure}[!h]
 \centering
