--- a/paper/rhapsodize-mobile-application/ubicomp.tex
+++ b/paper/rhapsodize-mobile-application/ubicomp.tex
@@ -93,11 +93,11 @@ Speech disfluencies are a common part of human conversation. From public speeche
 
 \section{Introduction}
 
-Public speaking is a very common fear amongst people. Speech ranges across a lot of different scenarios – after all, it is the main method by which we communicate with each other. Whether it is giving a speech or talking amongst friends, it is very common for people to have slight speech impediments. Phrases such as “like” and “um” permeate our speech and oftentimes the speaker does so unknowingly. After becoming so comfortable using these “crutch” words, it’s very hard for an individual to restrain his or herself from doing so.
+Public speaking is a very common fear. Speech ranges across a lot of different scenarios -- after all, it is the main method by which we communicate with each other. Whether it is giving a speech or talking amongst friends, it is very common for people to have slight speech impediments. Phrases such as ``like'' and ``um'' permeate our speech and oftentimes the speaker does so unknowingly. After becoming so comfortable using these “crutch” words, it’s very hard for an individual to restrain his or herself from doing so.
 
 Our application, Rhapsodize, aims to prevent this problem. We hypothesize that notifying a user of crutch word usage in real time will have a beneficial outcome in reducing the frequency of crutch word usage. When saying a crutch word in conversation or while practicing a speech, Rhapsodize will notify the user that a crutch word has been said, hopefully guiding the user to less and less frequent usage of these words. Over time, the user will be behaviorally conditioned to avoid saying these words, either consciously or subconsciously, thereby improving their overall speech giving performance.
 
-Rhapsodize is an Android application that uses Carnegie Mellon University’s CMUbSphinx speech recognition API to continuously detect speech for crutch word occurrences. It notifies the user when these words are said and also keeps track of how often they are said so that the user can log progress. Though ideally the application would be used throughout the day to keep track of the user’s speech in daily conversation, this would lead to privacy concerns as well as many more technical challenges in making the application more than simply proof of concept. As a result, Rhapsodize is to be used as a more situational, speech-giving improvement tool. The user places the phone running Rhapsodize in front of him or herself (or inside his or her pocket through the use of a microphone) while practicing giving a speech and the device will detect and count crutch word occurrences. 
+Rhapsodize is an Android application that uses Carnegie Mellon University`s CMU Sphinx speech recognition API to continuously detect speech for crutch word occurrences. It notifies the user when these words are said and also keeps track of how often they are said so that the user can log progress. Though ideally the application would be used throughout the day to keep track of the user’s speech in daily conversation, this would lead to privacy concerns as well as many more technical challenges in making the application more than simply a proof of concept. As a result, Rhapsodize is to be used as a more situational, speech-giving improvement tool. The user places the phone running Rhapsodize in front of him or herself (or inside his or her pocket through the use of an external microphone) while practicing giving a speech and the device will detect and count crutch word occurrences. 
 
 Our experimental design seeks to determine to what extent such a tool would benefit users in improving their speech giving skills. Ideally, the use of the application would allow users to become more fluent in their speaking by allowing them to train themselves over time to speak with minimal inclusion of such speech disfluencies. Long term, we hope to distribute a fully-realized version of our application with additional features, including captured transcriptions and data visualizations for general and widespread public use.
 
@@ -108,17 +108,19 @@ u wot m8
 
 \section{Methods}
 
-In the creation and testing of our application, we planned for the development of two somewhat distinct branches of Rhapsodize. That is, we initially developed a version of the application intended primarily for testing of viability and effectiveness of conditioning-based training of crutch words. This branch of development focused mostly on achieving the desired core functionality of the application in terms of distinct keyword parsing and recognition. It was this testing-version of the application that we used in performing all of our volunteer-based experiments. As a result, it is somewhat limited in terms of the end-functionality that we intended and can only detect certain crutch words that have been pre-programmed, that is, “like,” and “so.”
+In the creation and testing of our application, we planned for the development of two distinct branches of Rhapsodize. For the testing phase of development, we modified our application specifically for testing purposes. We forked our original repository to create a separate testing environment. The original version of Rhapsodize was intended primarily for testing of viability and effectiveness of conditioning-based training of crutch words. This development branch focused mostly on achieving the desired core functionality of the application in terms of distinct keyword parsing and recognition. The testing version of the application was what we used when performing all of our volunteer-based experiments. As a result, it is somewhat limited in terms of the end-functionality that we intended and can only detect certain crutch words that have been pre-programmed. In this case, ``like,'' and ``so.''
 
-The alternate branch of Rhapsodize was developed with the intent to create a production-level application ready for personal, public use. It is with this version that we intend to implement a fully featured application with tools for reviewing previously recorded transcripts as well as visualizations for the captured data.
+The development branch of Rhapsodize was developed with the intent to create a production-level application ready for personal, public use. It is with this version that we intend to implement a fully featured application with tools for reviewing previously recorded transcripts as well as visualizations for the captured data. On the other hand, the testing version of the application has the experiment in mind. We want to show through our experiment that notifying the user of crutch word usage in real time has a noticable impact in decreasing user crutch word frequency. In order to show this specific effect, we needed to keep all other variables constant. Things such as content of speech, length of speech, etc., all needed to be as similar as possible such that it doesn't have any bearing on our results. Furthermore, we wanted to keep hidden to the volunteer whether or not notifications were being given. In fact, we didn't even want the volunteers to know what exactly we were testing. By only telling the volunteer that we are testing a mobile application that helps speech practices, we eliminate possibilites that users are more self-concious of their speech from knowing what the application does. By randomizing periods of notifications on and off, we can remove user bias and be able to have a fiarly objective average of crutch word frequency during the notification on and notification off periods.
 
-Through the behavioral training of users through auditory and haptic feedback, our application seeks to improve relative user performance to a significant degree. In evaluating the effectiveness of Rhapsodize in improving general speaking patterns through the removal of speech disfluencies, we developed the following experimental design. During our testing and evaluation, we regarded having an average decrease in crutch word usage of at least 1 word per minute as significant. In evaluating the results obtained through testing, we noted that due to large variations in speaking patterns per individual, there was a very diverse set of results, and depending on the user, the number and spread of crutch words detected was drastically varied.
+The testing version of the application reflects this experiment design. It is programmed to have a sixteen minute timer, where the notification status is randomized every two minutes (but it's guaranteed for there to be 4 on and 4 off periods). The front page displays the notification status, the count during each period, and total count. This testing specific application was useful in gathering data.
+
+Through the behavioral training of users through auditory and haptic feedback, our application seeks to improve relative user performance to a significant degree. In evaluating the effectiveness of Rhapsodize in improving general speaking patterns through the removal of speech disfluencies, we developed the following experimental design. In evaluating the results obtained through testing, we noted that due to large variations in speaking patterns per individual, there was a very diverse set of results, and depending on the user, the number and spread of crutch words detected was drastically varied.
 
 \subsection{Experimental Design}
 \begin{itemize}
-\item[1.] Create an Android application that when opened, tracks the input speech while notifying the user when a crutch word is said. The application tracks how many times a crutch word is said during each session the application is open.
-\item[2.] Find 5~10 willing volunteers with an Android device with 4.1+. After having them sign a consent paper, download the application on their phone and give them instructions for the experiment. The users are not informed of the full nature of the experiment, and specifically are not notified that crutch words will be detected. This is done as to prevent any pre-experiment bias that they may receive.
-\item[3.] Give the volunteer a piece of paper with a series of questions intended to invoke an extended duration of storytelling. At this point, the volunteer will give responses to these questions while the application is in use.
+\item[1.] Find 10 willing volunteers. After having them sign a consent paper, give them the phone with the testing version of Rhapsodize installed, and give them instructions for the experiment. The users are not informed of the full nature of the experiment, and specifically are not notified that crutch words will be detected. This is done as to prevent any pre-experiment bias that they may receive.
+\item[2.] Give the volunteer a piece of paper with a series of questions intended to invoke an extended duration of storytelling. At this point, the volunteer will give responses to these questions while the application is in use.
+\item[3.] During this time, record the number of each crutch word said during every period as well as whether or not notifications were enabled.
 \item[4.] Ask the participant for subjective views on if the application was helpful in practicing their speech. (i.e. Did you feel the application helped you minimize usage of crutch words? Did you enjoy the application user interface? What aspects of the application did you like/dislike?).
 \item[5.] Evaluate and analyze the gathered data. 
 \end{itemize}
@@ -164,7 +166,7 @@ We rely on the cooperation of several volunteers for data collection. For the te
 
 In this manner, we are able to observe the effects of the application in real-time, without directly biasing the user’s behavior. Furthermore, after the application testing has concluded, we ask participants for their subjective views on their speaking before, during, and after the testing and examine how they perceive their own performance. We can then look at the objective and subjective data to evaluate the effectiveness of our application.
 
-We utilize the CMUSphinx speech recognition API to detect speech and parse the spoken words. From this, we can gauge the user’s tendency to use certain words over others, and especially detect his/her usage of key “crutch” words. Throughout testing, the presence of these specific words will be recorded and analyzed with respect to time and application state.  For each of the randomized, two-minute long periods during which the application was being used, we recorded the number of times that the crutch words “like,” and “so,” were used. Aside from the automatically produced vibration notifications, the user was not interacted with during his or her speech. We performed a similar test for each of the other volunteers, trying as best as possible to avoid creating bias in anticipating the nature of the experiment.
+We utilize the CMU Sphinx speech recognition API to detect speech and parse the spoken words. From this, we can gauge the user’s tendency to use certain words over others, and especially detect his/her usage of key crutch words. Throughout testing, the presence of these specific words will be recorded and analyzed with respect to time and application state.  For each of the randomized, two-minute long periods during which the application was being used, we recorded the number of times that the crutch words “like,” and “so,” were used. Aside from the automatically produced vibration notifications, the user was not interacted with during his or her speech. We performed a similar test for each of the other volunteers, trying as best as possible to avoid creating bias in anticipating the nature of the experiment.
 
 \begin{figure}[!h]
 \centering
